Added FindTodoById method
